--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <h1>Welcome to Your Transactions Dashboard</h1>
                 <p>Track and manage your financial transactions easily.</p>
                 <div class="cta-buttons mt-4">
-                    <div id="viewTransactionsBtn" class="btn btn-dark">View Transactions Table</div>
-                    <div id="viewGrapgBtn" class="btn btn-dark">View Transactions Graph</div>
+                    <div id="viewTransactionsBtn" class="btn btn-dark my-2">View Transactions Table</div>
+                    <div id="viewGrapgBtn" class="btn btn-dark my-2">View Transactions Graph</div>
                 </div>
             </div>
         </section>
