--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
         <section class="features">
             <h2>Key Features</h2>
-            <ul>
+            <ul class="pb-4">
                 <li>Real-time updates</li>
                 <li>Interactive graphs</li>
                 <li>Exportable data</li>
