--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </section>
     
-        <section class="features">
+        <section class="features py-5">
             <h2>Key Features</h2>
             <ul class="pb-4">
                 <li>Real-time updates</li>
