--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </div>
         </section>
     
-        <section class="features py-5">
+        <section class="features">
             <h2>Key Features</h2>
-            <ul class="pb-4">
+            <ul class="py-4">
                 <li>Real-time updates</li>
                 <li>Interactive graphs</li>
                 <li>Exportable data</li>
