--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </section>
 
-    <footer class="site-footer bg-dark text-white">
+    <footer class="site-footer bg-dark text-white mt-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-12">
